# penix-getopt

./: .gitignore  1  CMakeLists.txt  Makefile  Readme.md  What i will do.txt  What is will do.txt  version disambiguation.md
examples/: 0-init.c  1-class.c  10-master_in_master.c  2-flags.c  2.1-implenting_parsing.c  3-implenting_parsing.c  4-2-DENY_CUSTOM.c  4-keys.c  6-classes.c  7-error_management.c  8-masters.c  9-option_in_master.c  MakeFile  Readme.md
examples/0-init/: 0-init.c  Readme.md
examples/1-main_class/: 1-main_class.c  Readme.md
examples/2-flags/: 2-flags.c  Readme.md
examples/3-implenting_parsing/: 3-implenting_parsing.c  Readme.md
examples/4-keys/: 4-1-ALW_CUSTOM.c  4-2-DENY_CUSTOM.c  4-keys.c  Readme.md
examples/5-Clone_options/: 5-Clone_options.c  Readme.md
examples/6-classes/: 6-classes.c  Readme.md
examples/7-error_management/: 7-error_management.c  Readme.md
examples/8-masters/: 8-1-option_in_master.c  8-2-master_in_master.c  8-masters.c  Readme.md
handbooks/manual-handbook/: Makefile  book.adoc  theme.yml
handbooks/manual-handbook/contents/en/Classes, Flags and Keys/: _1.adoc  _2.adoc  _index.adoc
handbooks/manual-handbook/contents/en/Masters and Their Implementation/: _index.adoc
handbooks/manual-handbook/contents/en/Parsing User Options/: _1.adoc  _index.adoc
handbooks/manual-handbook/contents/en/introduction/: _1.adoc  _2.adoc  _3.adoc  _4.adoc  _5.adoc  _6.adoc  _index.adoc
handbooks/manual-handbook/contents/en/preface/: _index.adoc
include/: branch.h  master.h  pgetopt.h
src/: pclass.c  perror.c  pgoerror.c  pinit.c  pkey.c  popt_parser.c  ptree_parser.c
src/lib/: alloc.c  pgetopt_alloc.h  popt_class.c  popt_class.h  popt_error.c  popt_error.h  popt_init.c  popt_init.h  popt_key.h  popt_string.h  popt_tree.h
src/lib/mem_manage/: salloc.c  salloc.h
src/pclass/: pclass_create.c  pclass_free.c  pclass_get_key_size.c  pclass_key.c  pclass_loop_get_opt_id.c  pclass_set_allowed_options.c
src/pinit/: pinit_master.c  pinit_parser.c  pinit_set_allowed_masters.c  pinit_set_main_class.c
test/: MakeFile  Makefile  main.c  main_test.c  test.c  test_cloneoption_flag.c  test_main.c  test_simple.c
test/t-lib/: master_1.c  master_2.c  opts.h
